[tool.poetry]
name = "mrxcavator"
version = "0.4.7"
description = "CLI client for CRXcavator.io"
authors = ["Mark Stanislav <mark.stanislav@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/mstanislav/mrxcavator"
homepage = "https://github.com/mstanislav/mrxcavator"
include = ["docs/mrxcavator.html"]

[tool.poetry.dependencies]
python = "^3.6"
validators = "0.15.0"
asciichartpy = "1.5.21"
tqdm = "4.46.1"
termtables = "0.2.1"
requests = "2.23.0"
PyInquirer = "1.0.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
mrxcavator = "mrxcavator:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
