[tool.poetry]
name = "mrxcavator"
version = "0.6.1"
description = "CLI client for CRXcavator.io"
authors = ["Mark Stanislav <mark.stanislav@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/mstanislav/mrxcavator"
homepage = "https://github.com/mstanislav/mrxcavator"
documentation = "https://mstanislav.github.io/mrxcavator/mrxcavator.html"
include = ["docs/mrxcavator.html"]

[tool.poetry.dependencies]
python = "^3.6.1"
validators = "^0.16.0"
asciichartpy = "1.5.21"
tqdm = "^4.48.0"
termtables = "^0.2.2"
requests = "^2.24.0"
PyInquirer = "1.0.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
mrxcavator = "mrxcavator:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
